# UploadServer

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml
uploadserver/: app.py  models.py  utils.py
